# rust_collection

./: Cargo.toml  README.md
files/: address.csv  barcodes.txt  phone_numbers.txt
src/: main.rs
src/examples/: phonenumbers.rs
