[package]
name = "rust_collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
comfy-table = "7.1.1"
json = "0.12.4"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
csv = "1.3.0"
chrono = "0.4.38"
phonelib = "0.1.2"
